--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-mmcv>=0.2.10
+Cython
+mmcv
 numpy
 matplotlib
-six
-terminaltables
-pycocotools
-torch>=1.1
+opencv-python
+tqdm
+torch
 torchvision
+Pillow
+scipy
+terminaltables
+six
 imagecorruptions
